# User-Delivery-service

./: .env_example  Cargo.toml  Dockerfile  build.rs  docker-compose.yaml
migrations/2023-02-15-092601_users_and_couriers_creating/: down.sql  up.sql
migrations/2023-05-03-123103_users_queue/: down.sql  up.sql
proto/: analytics.proto  orders.proto  users.proto
src/: lib.rs  main.rs
src/handlers/: auth_handler.rs  couriers_handler.rs  mod.rs  users_handler.rs
src/middleware/: jwt_middleware.rs  logs_middleware.rs  mod.rs  permissions_middleware.rs  uuid_checker_middleware.rs
src/models/: couriers_model.rs  mod.rs  queue_model.rs  users_model.rs
src/repository/: couriers_repository.rs  mod.rs  queue_repository.rs  users_repository.rs
src/resources/: postgres.rs
src/routes/api/: config.rs  mod.rs
src/routes/api/auth/: auth.rs
src/routes/api/v1/: couriers.rs  mod.rs  users.rs  v1_config.rs
src/schema/: schema.rs
src/services/: auth_service.rs  couriers_service.rs  mod.rs  users_service.rs
src/utils/: configs.rs  errors.rs  mod.rs  permission_policy.rs  validators.rs
src/utils/grpc/: analytics_grpc.rs  mod.rs  orders_grpc.rs  users_grpc.rs
