[package]
name = "delivery_user"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "delivery_user"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
diesel = { version = "2.0.3", features = ["postgres", "uuid", "chrono"] }
dotenvy = "0.15"
uuid = { version ="1.3.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"]}
chrono= { version = "0.4.23", features = ["serde"] }
serde= {version="1.0", features = ["derive"]}
serde_json = "1.0"
bb8 = "0.8.0"
diesel-async = { version = "0.2.1", features = ["bb8", "postgres"] }
validator = { version = "0.16.0", features = ["derive", "phone"] }
actix-web-validator = "5.0.1"
futures = "0.3.27"
structopt = "0.3.26"
futures-util = { version = "0.3.28", features = ["std"] }
anyhow = "1.0.71"

# tracing dependencies
tracing-actix-web = "0.7.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-appender = "0.2.2"

# auth dependencies
actix-web-httpauth="0.8.0" 
argonautica = "0.2" 
hmac="0.12.1" 
jwt="0.16.0"
sha2="0.10.6"

# # RPC dependencies
tonic = "0.9.1"
prost = "0.11.8"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"]}

actix-rt = "2.8.0"

[build-dependencies]
tonic-build = "0.9.1"


